section-3-activity-template.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: >-
  Section 3 Activity template. 
  It launches a VPC with public and private subnets, 
  a web server EC2 instance in the public subnet 
  and a security group attached to this EC2 instance.

Parameters:
  WebServerInstanceType:
    Type: String
    Description: Choose Require Instance Type
    AllowedValues:
      - t2.nano
      - t2.micro
      - t2.small
  WebServerInstanceImageId:
    Type: String
    Description: Only choosen one is below.
    Default: ami-0e820afa569e84cc1
  WebServerInstanceBlkParameter:
    Type: Number
    Default: 20 
  WebserverIntKeyName:
    Type: AWS::EC2::KeyPair::KeyName
    Description: Choose Required KeyPair for this Setup.
  WebserverCommadelimite.
  dlist:
    Type: CommaDelimitedList
    Description: 'Vpc, Public Subnet, private Subnet'
  WebserverAvilabilityZone:
    Type: List<AWS::EC2::AvailabilityZone::Name>
    Description: Choose one of the AZ for the given subnets.

Resources:
  Vpc:
    Type: AWS::EC2::VPC
    Description: Section 3 activity VPC
    Properties:
      CidrBlock: !Select [ 0, !Ref WebserverCommadelimitedlist ] 
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        -
          Key: Name
          Value: !Sub '${AWS::StackName}-VPC'

  # Subnets ---        
  PublicSubnet:
    Type: AWS::EC2::Subnet 
    Properties:
      AvailabilityZone: !Select [ 0, !Ref WebserverAvilabilityZone ]
      CidrBlock: !Select [ 1, !Ref WebserverCommadelimitedlist ]
      MapPublicIpOnLaunch: true
      VpcId: !Ref Vpc
      Tags:
        -
          Key: Name
          Value: Public Subnet

  PrivateSubnet:
    Type: AWS::EC2::Subnet 
    Properties:
      AvailabilityZone: !Select [ 1, !Ref WebserverAvilabilityZone ]
      CidrBlock: !Select [ 2, !Ref WebserverCommadelimitedlist ]
      VpcId: !Ref Vpc
      Tags:
        -
          Key: Name
          Value: Private Subnet

  # Route tables ---
  PublicRouteTable:
    Type: AWS::EC2::RouteTable 
    Properties:
      VpcId: !Ref Vpc
      Tags:
        -
          Key: Name
          Value: Public Route Table
  PrivateRouteTable:
    Type: AWS::EC2::RouteTable 
    Properties:
      VpcId: !Ref Vpc
      Tags:
        -
          Key: Name
          Value: Private Route Table

  # Internet route for the public route table ---
  InternetGateway:
    Type: AWS::EC2::InternetGateway
  VpcGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref Vpc
      InternetGatewayId: !Ref InternetGateway
  InternetRoute:
    Type: AWS::EC2::Route 
    DependsOn:
      - VpcGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      GatewayId: !Ref InternetGateway
      DestinationCidrBlock: 0.0.0.0/0

  # Subnet - Route table associations ---    
  PublicSubnetRouteTableAssoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet
  PrivateSubnetRouteTableAssoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      SubnetId: !Ref PrivateSubnet

  # Web server and security group -------------------------------------
  WebServerInstance:
    Type: AWS::EC2::Instance 
    DependsOn:
      - InternetRoute
      - PublicSubnetRouteTableAssoc
    Properties:
      InstanceType: !Ref WebServerInstanceType
      SubnetId: !Ref PublicSubnet 
      ImageId: !Ref WebServerInstanceImageId     #ohio
      KeyName: !Ref WebserverIntKeyName
      SecurityGroupIds:
        - !Ref WebServerSecurityGroup
      BlockDeviceMappings:
        - 
          DeviceName: /dev/sdf
          Ebs:
            VolumeSize: !Ref WebServerInstanceBlkParameter
            VolumeType: gp2
      Tags:
        -
          Key: Name
          Value: Web Server

  WebServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup 
    Properties:
      GroupDescription: Activity security group 
      VpcId: !Ref Vpc
      SecurityGroupIngress:
              
        # HTTP rule
        -
          CidrIp: 0.0.0.0/0 
          IpProtocol: tcp
          FromPort: 80
          ToPort: 80

        # SSH rule
        -
          CidrIp: 0.0.0.0/0 
          IpProtocol: tcp
          FromPort: 22 
          ToPort: 22
